Remove height of mobile menu bar from '.empty' container

--- a/resources/sass/common/component/_sidebar.scss
+++ b/resources/sass/common/component/_sidebar.scss
@@ -160,4 +160,8 @@ $mobile-menu-bar-height: 50px;
     #main {
         margin-left: 0;
     }
+
+    .empty {
+        height: calc(100vh - #{$mobile-menu-bar-height});
+    }
 }
