--- a/resources/sass/login/_login.scss
+++ b/resources/sass/login/_login.scss
@@ -32,6 +32,7 @@ html, body {
     box-shadow: 0 0 3px 0 rgba(0,0,0,0.25);
     padding: 0 50px 50px 50px;
     min-width: 350px;
+    max-width: 700px;
     margin: 0 15px auto 15px;
 }
 
