--- a/resources/sass/includes/_theming.scss
+++ b/resources/sass/includes/_theming.scss
@@ -41,7 +41,7 @@ $themes: (
 
 @mixin themed() {
     @each $theme, $map in $themes {
-        .theme--#{$theme} & {
+        .ta\:#{$theme} & {
             $theme-map: () !global;
             @each $key, $submap in $map {
                 $value: map-get(map-get($themes, $theme), '#{$key}');
