--- a/resources/sass/includes/_theme-dark.scss
+++ b/resources/sass/includes/_theme-dark.scss
@@ -16,5 +16,5 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
-$logo: url('/manifest/logo--invert.svg');
+$logo: url('/static/manifest/wordmark_full--invert.svg');
 $background: #000000;
