--- a/resources/sass/layout/_index.scss
+++ b/resources/sass/layout/_index.scss
@@ -15,3 +15,7 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
+
+@forward 'auth-footer';
+@forward 'auth-grid';
+@forward 'auth-header';
