--- a/resources/sass/layout/_auth-header.scss
+++ b/resources/sass/layout/_auth-header.scss
@@ -16,12 +16,19 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
+@use '../includes/theming';
+
 .ta\:auth .ta\:header {
     width: 100%;
-    height: 64px;
+    height: 50px;
 
     .ta\:logo {
         margin: 0 auto;
         height: 100%;
+        font-size: 1.5em;
+    }
+
+    @include theming.themed() {
+        border-bottom: 1px solid theming.t(theming.$color-secondary);
     }
 }
