--- a/resources/sass/includes/_theme-dark.scss
+++ b/resources/sass/includes/_theme-dark.scss
@@ -16,5 +16,10 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
-$logo: url('/static/manifest/wordmark_full--invert.svg');
-$background: #000000;
+$color-primary: #000000;
+$color-secondary: #141414;
+
+$glyph-primary: #f5f5f7;
+$glyph-secondary: #a1a1a6;
+$glyph-blue: #2997FF;
+$glyph-blue-override: #0066CC;
