--- a/resources/sass/includes/_theme-light.scss
+++ b/resources/sass/includes/_theme-light.scss
@@ -16,5 +16,10 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
-$logo: url('/static/manifest/wordmark_full.svg');
-$background: #ffffff;
+$color-primary: #ffffff;
+$color-secondary: #fafafa;
+
+$glyph-primary: #1d1d1f;
+$glyph-secondary: #86868b;
+$glyph-blue: #2997FF;
+$glyph-blue-override: #0066CC;
