--- a/resources/sass/includes/_theme-dark.scss
+++ b/resources/sass/includes/_theme-dark.scss
@@ -18,8 +18,11 @@
 
 $color-primary: #000000;
 $color-secondary: #141414;
+$color-tertiary: #1d1d1f;
 
 $glyph-primary: #f5f5f7;
 $glyph-secondary: #a1a1a6;
+$glyph-tertiary: #6e6e73;
+
 $glyph-blue: #2997FF;
 $glyph-blue-override: #0066CC;
