--- a/resources/sass/includes/_theme-light.scss
+++ b/resources/sass/includes/_theme-light.scss
@@ -18,8 +18,11 @@
 
 $color-primary: #ffffff;
 $color-secondary: #fafafa;
+$color-tertiary: #f5f5f5;
 
 $glyph-primary: #1d1d1f;
-$glyph-secondary: #86868b;
+$glyph-secondary: #515154;
+$glyph-tertiary: #86868b;
+
 $glyph-blue: #2997FF;
 $glyph-blue-override: #0066CC;
