--- a/resources/sass/base/_index.scss
+++ b/resources/sass/base/_index.scss
@@ -16,4 +16,6 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
+@forward 'background';
 @forward 'normalize';
+@forward 'typography';
