--- a/resources/sass/layout/_auth.scss
+++ b/resources/sass/layout/_auth.scss
@@ -17,18 +17,53 @@
  */
 
 @use '../includes/breakpoints';
+@use '../includes/theming';
 
-.ta\:auth .ta\:content {
-    padding: 65px 15px;
-    max-width: 960px;
-    margin: 0 auto;
+$page-width: 960px;
 
-    .ta\:flex-container {
-        display: flex;
+.ta\:auth {
+    display: flex;
+    flex-direction: column;
+
+    header {
+        width: 100%;
+        height: 44px;
+        flex: 0 0 auto;
+
+        div {
+            margin: 0 auto;
+            height: 100%;
+            font-size: 1.5em;
+        }
     }
 
-    @include breakpoints.small() {
-        padding-top: 0;
-        padding-bottom: 0;
+    main {
+        max-width: $page-width;
+        margin: 0 auto;
+        flex: 1 0 auto;
+
+        .ta\:flex {
+            margin-top: 20px;
+            display: flex;
+            gap: 25px;
+
+            div {
+                flex: 50%;
+            }
+        }
+
+        @include breakpoints.small() {
+            margin: 0;
+        }
+    }
+
+    footer {
+        height: 75px;
+        flex-shrink: 0;
+
+        ul {
+            max-width: $page-width;
+            margin: 0 auto;
+        }
     }
 }
