--- a/resources/sass/layout/_index.scss
+++ b/resources/sass/layout/_index.scss
@@ -16,6 +16,4 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
-@forward 'auth-footer';
-@forward 'auth-content';
-@forward 'auth-header';
+@forward 'auth';
