Improve styling and add HTML for auth.register

--- a/resources/sass/components/_auth-auth-container.scss
+++ b/resources/sass/components/_auth-auth-container.scss
@@ -17,54 +17,23 @@
  */
 
 @use '../includes/theming';
+@use '../includes/breakpoints';
 
-body {
-    line-height: 1.42;
-    font-weight: 400;
-    letter-spacing: 0;
-    font-family: 'InterVariable',
-    'Helvetica Neue',
-    'Helvetica',
-    sans-serif;
-    font-style: normal;
-    font-synthesis: none;
-    direction: ltr;
+.ta\:auth .ta\:auth-container {
+    border-radius: 18px;
+    padding: 20px;
+    box-sizing: border-box;
 
-    @include theming.themed() {
-        color: theming.t(theming.$glyph-primary);
+    input[type="submit"] {
+        width: 100%;
     }
-}
-
-h1, h2, h3, h4, h5, h6 {
-    line-height: 1.1;
-    font-weight: 500;
-    letter-spacing: 0;
-    font-family: 'InterVariable',
-    'Helvetica Neue',
-    'Helvetica',
-    'Arial',
-    sans-serif;
-    font-style: normal;
-}
-
-h2 {
-    font-size: 2.5rem;
-}
-
-a {
-    text-decoration: none;
 
     @include theming.themed() {
-        color: theming.t(theming.$glyph-link);
+        border: 1px solid theming.t(theming.$color-accent-secondary);
+        background-color: theming.t(theming.$color-secondary);
     }
-}
 
-a:hover {
-    text-decoration: underline;
-}
-
-a:visited {
-    @include theming.themed() {
-        color: theming.t(theming.$glyph-link);
+    @include breakpoints.small() {
+        border-radius: 8px;
     }
 }
