--- a/resources/sass/includes/_theme-dark.scss
+++ b/resources/sass/includes/_theme-dark.scss
@@ -17,12 +17,18 @@
  */
 
 $color-primary: #000000;
+$color-accent-primary: #000000;
 $color-secondary: #141414;
+$color-accent-secondary: #141414;
 $color-tertiary: #1d1d1f;
+$color-accent-tertiary: #1d1d1f;
+$color-error: #ff0033;
+$color-success: #4bb543;
+$color-button-primary: #0071e3;
+$color-button-primary-hover: #0077ED;
 
 $glyph-primary: #f5f5f7;
 $glyph-secondary: #a1a1a6;
 $glyph-tertiary: #6e6e73;
-
-$glyph-blue: #2997FF;
-$glyph-blue-override: #0066CC;
+$glyph-button-primary: #f5f5f7;
+$glyph-link: #0071e3;
