--- a/resources/sass/includes/_theme-light.scss
+++ b/resources/sass/includes/_theme-light.scss
@@ -16,13 +16,19 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
-$color-primary: #ffffff;
-$color-secondary: #fafafa;
-$color-tertiary: #f5f5f5;
+$color-primary: #fcfcfc;
+$color-accent-primary: #fcfcfc;
+$color-secondary: #f5f5f7;
+$color-accent-secondary: #f5f5f7;
+$color-tertiary: #ececec;
+$color-accent-tertiary: #ececec;
+$color-error: #ff0033;
+$color-success: #4bb543;
+$color-button-primary: #0071e3;
+$color-button-primary-hover: #0077ED;
 
 $glyph-primary: #1d1d1f;
 $glyph-secondary: #515154;
 $glyph-tertiary: #86868b;
-
-$glyph-blue: #2997FF;
-$glyph-blue-override: #0066CC;
+$glyph-button-primary: #f5f5f7;
+$glyph-link: #0071e3;
