--- a/resources/assets/sass/layout/_auth.scss
+++ b/resources/assets/sass/layout/_auth.scss
@@ -41,13 +41,14 @@ $page-width: 960px;
         margin: 0 auto;
         flex: 1 0 auto;
 
-        .ta\:flex {
+        .ta\:content {
             margin-top: 20px;
             display: flex;
             gap: 25px;
 
-            div {
+            > div {
                 flex: 50%;
+                align-self: flex-start;
             }
         }
 
