--- a/resources/assets/sass/components/_form.scss
+++ b/resources/assets/sass/components/_form.scss
@@ -60,6 +60,8 @@
 
     input[type="submit"] {
         border: none;
+        white-space: normal;
+        word-wrap: break-word;
     }
 
     .ta\:form-group {
